hphp/hack/test/decl/array_typehints.php.typecheck.exp
File "array_typehints.php", line 38, characters 17-51:
Too many type arguments for this type (Naming[2065])
